sbi-manifests/sbi-cms-issuance-scheduler-api-extn/sbi-cms/templates/deployment.yaml
---
# Source: sbi-cms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbi-cms-issuance-scheduler-api-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-scheduler-api-extn
    intent: apps
spec:
  selector:
    matchLabels:
      app: sbi-cms-issuance-scheduler-api-extn
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sbi-cms-issuance-scheduler-api-extn
        intent: apps
      annotations:
        kubernetes.io/psp: eks.privileged
        "fss.com/app-configmap-hash": febfbfc36b7ca82f9897c3984fd74ba53d96ae419a66d9fc3654f90008a3759e
    spec:
      serviceAccountName: sbi-cms-issuance-scheduler-api-extn-sa
      volumes:
      containers:
        - name: sbi-cms-issuance-scheduler-api-extn
          image: 736483234466.dkr.ecr.ap-south-1.amazonaws.com/sbi-cms-issuance-scheduler-api-extn:sbi-uat.v177
          volumeMounts:
          ports:
            - containerPort: 8056
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      nodeSelector:
        app: sbi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
