sbi-manifests/sbi-cms-issuance-scheduler-api-extn/sbi-cms/templates/service.yaml
---
# Source: sbi-cms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbi-cms-issuance-scheduler-api-extn
  namespace: sbi
  labels:
    app: sbi-cms-issuance-scheduler-api-extn
  annotations: 
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8056-8056'
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 8056
      targetPort: 8056
      name: 8056-8056
  selector:
    app: sbi-cms-issuance-scheduler-api-extn
  type: ClusterIP
